[package]
name = "ybot"
version = "0.1.0"
authors = ["deagahelio <16138291+deagahelio@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = "0.4.0"
tinyfiledialogs = "3.3.9"
kernel32-sys = "0.2.2"
winapi = { version = "0.3.9", features = ["tlhelp32", "handleapi", "winnt"] }
